z-index fix

--- a/mbfs-website/content/css/scss/components/banner.scss
+++ b/mbfs-website/content/css/scss/components/banner.scss
@@ -113,6 +113,7 @@
       align-items: center;
       justify-content: center;
       padding: 5px;
+      z-index: -2;
 
       .call-to-action {
         display: block;
